@@ -10,6 +10,7 @@
 
 #include <algorithm>
 #include <limits>
+#include <numeric>
 
 namespace ml {
 namespace maths {
@@ -25,15 +26,24 @@ void CTreeShapFeatureImportance::shap(core::CDataFrame& frame,
         std::size_t maxDepth = CTreeShapFeatureImportance::updateNodeValues(tree, 0, 0);
         maxDepthVec.push_back(maxDepth);
     }
-
+    std::size_t maxDepthOverall =
+        *std::max_element(maxDepthVec.begin(), maxDepthVec.end());
     auto result = frame.writeColumns(m_NumberThreads, [&](const TRowItr& beginRows,
                                                           const TRowItr& endRows) {
+        // When traversing a tree, we successively copy the parent path and add one
+        // new element to it. This means that if a tree has maxDepthOverall depth,
+        // we store 1, 2, ... (maxDepthOverall+1) elements. The "+1" here comes from
+        // the fact that the initial element in the path has split feature -1.
+        // Altogether it results in ((maxDepthOverall + 1) * (maxDepthOverall + 2)) / 2
+        // elements to be store.
+        TElementVec pathVector(((maxDepthOverall + 1) * (maxDepthOverall + 2)) / 2);
+        TDoubleVec scaleVector(((maxDepthOverall + 1) * (maxDepthOverall + 2)) / 2);
         for (auto row = beginRows; row != endRows; ++row) {
             auto encodedRow{encoder.encode(*row)};
             for (std::size_t i = 0; i < m_Trees.size(); ++i) {
-                SPath path(maxDepthVec[i] + 1);
                 CTreeShapFeatureImportance::shapRecursive(
-                    m_Trees[i], encoder, encodedRow, path, 0, 1.0, 1.0, -1, offset, row);
+                    m_Trees[i], encoder, encodedRow, 0, 1.0, 1.0, -1,
+                    CSplitPath(pathVector.begin(), scaleVector.begin()), offset, row, 0);
             }
         }
     });
@@ -68,20 +78,22 @@ size_t CTreeShapFeatureImportance::updateNodeValues(TTree& tree,
 void CTreeShapFeatureImportance::shapRecursive(const TTree& tree,
                                                const CDataFrameCategoryEncoder& encoder,
                                                const CEncodedDataFrameRowRef& encodedRow,
-                                               SPath& splitPath,
                                                std::size_t nodeIndex,
                                                double parentFractionZero,
                                                double parentFractionOne,
                                                int parentFeatureIndex,
+                                               const CSplitPath& parentSplitPath,
                                                std::size_t offset,
-                                               core::CDataFrame::TRowItr& row) const {
-    boost::optional<SPath> backupPath;
-    CTreeShapFeatureImportance::extendPath(splitPath, parentFractionZero,
-                                           parentFractionOne, parentFeatureIndex);
+                                               core::CDataFrame::TRowItr& row,
+                                               int nextIndex) const {
+    CSplitPath splitPath{parentSplitPath, nextIndex};
+
+    CTreeShapFeatureImportance::extendPath(splitPath, parentFractionZero, parentFractionOne,
+                                           parentFeatureIndex, nextIndex);
     if (tree[nodeIndex].isLeaf()) {
         double leafValue = tree[nodeIndex].value();
-        for (int i = 1; i <= splitPath.depth(); ++i) {
-            double scale = CTreeShapFeatureImportance::sumUnwoundPath(splitPath, i);
+        for (int i = 1; i < nextIndex; ++i) {
+            double scale = CTreeShapFeatureImportance::sumUnwoundPath(splitPath, i, nextIndex);
             std::size_t inputColumnIndex{
                 encoder.encoding(splitPath.featureIndex(i)).inputColumnIndex()};
             // inputColumnIndex is read by seeing what the feature at position i is on the path to this leaf.
@@ -112,42 +124,33 @@ void CTreeShapFeatureImportance::shapRecursive(const TTree& tree,
         double incomingFractionZero{1.0};
         double incomingFractionOne{1.0};
         int splitFeature{static_cast<int>(tree[nodeIndex].splitFeature())};
-        auto featureIndexEnd{(splitPath.s_FeatureIndex.begin() + splitPath.nextIndex())};
-        auto it = std::find(splitPath.s_FeatureIndex.begin(), featureIndexEnd, splitFeature);
-        if (it != featureIndexEnd) {
+
+        int pathIndex{splitPath.find(splitFeature, nextIndex)};
+        if (pathIndex >= 0) {
             // Since we pass splitPath by reference, we need to backup the object before unwinding it.
-            backupPath = splitPath;
-            auto pathIndex = static_cast<std::size_t>(
-                std::distance(splitPath.s_FeatureIndex.begin(), it));
             incomingFractionZero = splitPath.fractionZeros(pathIndex);
             incomingFractionOne = splitPath.fractionOnes(pathIndex);
-            CTreeShapFeatureImportance::unwindPath(splitPath, pathIndex);
+            CTreeShapFeatureImportance::unwindPath(splitPath, pathIndex, nextIndex);
         }
 
         double hotFractionZero{static_cast<double>(tree[hotIndex].numberSamples()) /
                                tree[nodeIndex].numberSamples()};
         double coldFractionZero{static_cast<double>(tree[coldIndex].numberSamples()) /
                                 tree[nodeIndex].numberSamples()};
-        std::size_t nextIndex = splitPath.nextIndex();
-        this->shapRecursive(tree, encoder, encodedRow, splitPath, hotIndex,
-                            incomingFractionZero * hotFractionZero,
-                            incomingFractionOne, splitFeature, offset, row);
-        this->unwindPath(splitPath, nextIndex);
-        this->shapRecursive(tree, encoder, encodedRow, splitPath, coldIndex,
+        this->shapRecursive(tree, encoder, encodedRow, hotIndex,
+                            incomingFractionZero * hotFractionZero, incomingFractionOne,
+                            splitFeature, splitPath, offset, row, nextIndex);
+        this->shapRecursive(tree, encoder, encodedRow, coldIndex,
                             incomingFractionZero * coldFractionZero, 0.0,
-                            splitFeature, offset, row);
-        this->unwindPath(splitPath, nextIndex);
-        if (backupPath) {
-            // now we swap to restore the data before unwinding
-            splitPath = std::move(backupPath.get());
-        }
+                            splitFeature, splitPath, offset, row, nextIndex);
     }
 }
 
-void CTreeShapFeatureImportance::extendPath(SPath& path,
+void CTreeShapFeatureImportance::extendPath(CSplitPath& splitPath,
                                             double fractionZero,
                                             double fractionOne,
-                                            int featureIndex) {
+                                            int featureIndex,
+                                            int& nextIndex) {
     // Update binomial coefficients to be able to compute Equation (2) from the paper.  In particular,
     // we have in the line path.s_Scale[i + 1] += fractionOne * path.s_Scale[i] * (i + 1.0) / (pathDepth +
     // 1.0) that if we're on the "one" path, i.e. if the last feature selects this path if we include that
@@ -156,67 +159,85 @@ void CTreeShapFeatureImportance::extendPath(SPath& path,
     // to sets of size i and we **also** need to scale by the difference in binomial coefficients as both M
     // increases by one and i increases by one. So we get additive term 1{last feature selects path if in S}
     // * scale(i) * (i+1)! (M+1-(i+1)-1)!/(M+1)! / (i! (M-i-1)!/ M!), whence += scale(i) * (i+1) / (M+1).
-    path.extend(featureIndex, fractionZero, fractionOne);
-    int pathDepth = static_cast<int>(path.depth());
-    for (int i = (pathDepth - 1); i >= 0; --i) {
-        path.s_Scale[i + 1] += fractionOne * path.s_Scale[i] *
-                               static_cast<double>(i + 1.0) /
-                               static_cast<double>(pathDepth + 1.0);
-        path.s_Scale[i] = fractionZero * path.s_Scale[i] *
-                          static_cast<double>(pathDepth - i) /
-                          static_cast<double>(pathDepth + 1.0);
+    splitPath.setValues(nextIndex, fractionOne, fractionZero, featureIndex);
+    auto scalePath{splitPath.scale()};
+    if (nextIndex == 0) {
+        scalePath[nextIndex] = 1.0;
+    } else {
+        scalePath[nextIndex] = 0.0;
     }
+    double stepDown{fractionOne / static_cast<double>(nextIndex + 1)};
+    double stepUp{fractionZero / static_cast<double>(nextIndex + 1)};
+    double countDown{static_cast<double>(nextIndex) * stepDown};
+    double countUp{stepUp};
+    for (int i = (nextIndex - 1); i >= 0; --i, countDown -= stepDown, countUp += stepUp) {
+        scalePath[i + 1] += scalePath[i] * countDown;
+        scalePath[i] *= countUp;
+    }
+
+    ++nextIndex;
 }
 
-double CTreeShapFeatureImportance::sumUnwoundPath(const SPath& path, std::size_t pathIndex) {
+double CTreeShapFeatureImportance::sumUnwoundPath(const CSplitPath& path, int pathIndex, int nextIndex) {
+    const auto& scalePath{path.scale()};
     double total{0.0};
-    int pathDepth = static_cast<int>(path.depth());
-    double nextFractionOne{path.scale(pathDepth)};
+    int pathDepth = nextIndex - 1;
+    double nextFractionOne{scalePath[pathDepth]};
     double fractionOne{path.fractionOnes(pathIndex)};
     double fractionZero{path.fractionZeros(pathIndex)};
-
     if (fractionOne != 0) {
-        for (int i = pathDepth - 1; i >= 0; --i) {
-            double tmp = nextFractionOne * static_cast<double>(pathDepth + 1) /
-                         (static_cast<double>(i + 1) * fractionOne +
-                          std::numeric_limits<double>::epsilon());
-            nextFractionOne = path.scale(i) - tmp * fractionZero *
-                                                  static_cast<double>(pathDepth - i) /
-                                                  static_cast<double>(pathDepth + 1);
+        double pD = static_cast<double>(pathDepth + 1);
+        double stepUp{fractionZero / pD};
+        double stepDown{fractionOne / pD};
+        double countUp{stepUp};
+        double countDown{(pD - 1.0) * stepDown};
+        for (int i = pathDepth - 1; i >= 0; --i, countUp += stepUp, countDown -= stepDown) {
+            double tmp = nextFractionOne / countDown;
+            nextFractionOne = scalePath[i] - tmp * countUp;
             total += tmp;
         }
     } else {
-        for (int i = pathDepth - 1; i >= 0; --i) {
-            total += path.scale(i) * static_cast<double>(pathDepth + 1) /
-                     (fractionZero * static_cast<double>(pathDepth - i) +
-                      std::numeric_limits<double>::epsilon());
-        }
+        double pD{static_cast<double>(pathDepth)};
+        total =
+            std::accumulate(scalePath, scalePath + pathDepth, 0.0,
+                            [&pD](double a, double b) { return a + b / pD--; });
+        total *= static_cast<double>(pathDepth + 1) /
+                 (fractionZero + std::numeric_limits<double>::epsilon());
     }
 
     return total;
 }
 
-void CTreeShapFeatureImportance::unwindPath(SPath& path, std::size_t pathIndex) {
-    int pathDepth = static_cast<int>(path.depth());
-    double nextFractionOne{path.scale(pathDepth)};
+void CTreeShapFeatureImportance::unwindPath(CSplitPath& path, int pathIndex, int& nextIndex) {
+    auto& scalePath{path.scale()};
+    int pathDepth{nextIndex - 1};
+    double nextFractionOne{scalePath[pathDepth]};
     double fractionOne{path.fractionOnes(pathIndex)};
     double fractionZero{path.fractionZeros(pathIndex)};
 
     if (fractionOne != 0) {
-        for (int i = pathDepth - 1; i >= 0; --i) {
-            double tmp = nextFractionOne * (pathDepth + 1) /
-                         (static_cast<double>(i + 1) * fractionOne);
-            nextFractionOne = path.scale(i) - tmp * fractionZero * (pathDepth - i) /
-                                                  (pathDepth + 1);
-            path.s_Scale[i] = tmp;
+        double stepUp{fractionZero / static_cast<double>(pathDepth + 1)};
+        double stepDown{fractionOne / static_cast<double>(nextIndex)};
+        double countUp{0.0};
+        double countDown{static_cast<double>(nextIndex) * stepDown};
+        for (int i = pathDepth; i >= 0; --i, countUp += stepUp, countDown -= stepDown) {
+            double tmp{nextFractionOne / countDown};
+            nextFractionOne = scalePath[i] - tmp * countUp;
+            scalePath[i] = tmp;
         }
     } else {
-        for (int i = pathDepth - 1; i >= 0; --i) {
-            path.s_Scale[i] = path.scale(i) * static_cast<double>(pathDepth + 1) /
-                              (fractionZero * static_cast<double>(pathDepth - i));
+        double stepDown{(fractionZero + std::numeric_limits<double>::epsilon()) /
+                        static_cast<double>(pathDepth + 1)};
+        double countDown{static_cast<double>(pathDepth) * stepDown};
+        for (int i = 0; i <= pathDepth; ++i, countDown -= stepDown) {
+            scalePath[i] = scalePath[i] / countDown;
         }
     }
-    path.reduce(pathIndex);
+    for (int i = pathIndex; i < pathDepth; ++i) {
+        path.setValues(i, path.fractionOnes(i + 1), path.fractionZeros(i + 1),
+                       path.featureIndex(i + 1));
+    }
+    --nextIndex;
 }
 }
 }
